# pyvista-mcp-server

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/pyvista_mcp_server/: __main__.py  server.py
